# refkit

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  Makefile  NOTICE  README.md  pyproject.toml
.github/: AGENTS.md  dependabot.yml
.github/actions/configure-rust-build/: action.yml
.github/actions/create-pyodide-venv/: action.yml
.github/actions/setup-pyodide/: action.yml
.github/pyodide/: pylock.314.toml  requirements.in  runtime.json  smoke_polars_refkit.py  smoke_refkit.py  test_polars_refkit_runtime.py  test_refkit_runtime.py
.github/release-notes/: package-lock.json  package.json
.github/workflows/: ci.yml  publish.yml  release-tests-polars-refkit.yml  release-tests-refkit-core.yml  release-tests-refkit.yml  release-tests.yml  source-checks.yml
benchmark/: README.md  __init__.py  adapters.py  fixtures.py  hatch_build.py  pyproject.toml  runner.py
benchmark/_adapters/: __init__.py  bibtexparser_v2.py  citeproc_py.py  common.py  polars_refkit.py  refkit.py
benchmark/src/refkit_bench/: adapters.py  fixtures.py  runner.py
benchmark/src/refkit_bench/_adapters/: bibtexparser_v2.py  citeproc_py.py  common.py  polars_refkit.py  pybtex.py  refkit.py
benchmark/src/refkit_bench/data/: tiny.bib
benchmark/tests/: test_benchmark.py
crates/bibtex-tidy-rs/: AGENTS.md  Cargo.toml  NOTICE  README.md
crates/bibtex-tidy-rs/src/: duplicates.rs  keys.rs  lib.rs  render.rs  unicode.rs
crates/bibtex-tidy-rs/tests/: corpus_acceptance.rs  spec_smoke.rs
crates/refkit-core/: AGENTS.md  Cargo.toml
crates/refkit-core/src/: document.rs  lib.rs  library.rs  raw.rs  render.rs  render_tree.rs  strings.rs  style.rs  style_analysis.rs
crates/refkit-core/src/raw/: edit.rs  parse.rs  sanitize.rs  tests.rs
crates/refkit-core/src/render/: bibliography.rs  citation.rs  html.rs  mod.rs  text.rs
crates/refkit-core/src/tidy/: duplicates.rs  keys.rs  latex.rs  mod.rs  options.rs  render.rs
crates/refkit-core/src/tidy/render/: sort.rs  value.rs
data/arxiv-wild/: README.md  references-subset.bib
development_docs/: README.md  architecture.md  benchmarks.md  development.md  feature-matrix.md  packaging-and-release.md  repository-contracts.md  testing.md
docs/: api-contracts.md  feature-matrix.md  migration.md  pyodide.md  release.md
scripts/: AGENTS.md  architecture_contract.py  check_dependency_provenance.py  distribution_contract.py  docs_contract.py  inspect_package.py  normalize_wheel.py  pyodide_lock.py  release_contract.py  release_smoke.py
scripts/tests/: test_architecture_contract.py  test_distribution_contract.py  test_docs_contract.py  test_normalize_wheel.py  test_pyodide_lock.py  test_release_contract.py
src/: lib.rs  public_strings.rs  raw.rs  rendered.rs  style_analysis.rs
src/citecore/: __init__.py  __init__.pyi  _native.pyi
src/refkit/: __init__.py  __init__.pyi  _native.pyi
testdata/tidy/: UPSTREAM.md
testdata/tidy/corpus/: corpus.test.ts
testdata/tidy/corpus/better-bibtex/: Jabref_import_-_groups_lost_1730-3.bib  Jabref_import_-_groups_lost_1730-5.bib
testdata/tidy/spec/: blank-lines.spec.yaml
tests/: test_public_api.py
tests/fixtures/: basic.bib  parent.yaml  parent.yml  typst-biblatex.bib
