[workspace]
members = [
    "crates/refkit-core",
    "packages/refkit-core/rust",
]
resolver = "3"

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/petergy/refkit"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
