[project]
name = "refkit"
version = "0.0.0"
description = "Fast Python citation parsing, rendering, and BibTeX editing backed by Rust"
readme = "README.md"
license = "MIT OR Apache-2.0"
license-files = ["LICENSE-APACHE", "LICENSE-MIT"]
authors = [
    { name = "Péter Ferenc Gyarmati", email = "dev.petergy@gmail.com" }
]
requires-python = ">=3.11,<3.15"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Typing :: Typed",
]
dependencies = []

[build-system]
requires = ["maturin>=1.9,<2"]
build-backend = "maturin"

[tool.maturin]
python-source = "src"
module-name = "refkit._native"
bindings = "pyo3"
features = ["extension-module"]
editable-profile = "dev"
strip = true

[dependency-groups]
dev = [
    { include-group = "benchmark" },
    "maturin>=1.9,<2",
    "pyrefly>=1.0.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.16",
    "ty>=0.0.46",
]
benchmark = [
    "bibtexparser>=1.4.4,<2",
    "citeproc-py>=0.9.3",
    "citeproc-py-styles>=0.1.5",
    "pytest>=9.0.3",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "benchmark/tests"]
addopts = [
    "--cov=refkit",
    "--cov=benchmark",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-fail-under=100",
]

[tool.coverage.run]
omit = ["benchmark/tests/*"]

[tool.pyrefly]
project-includes = ["src/refkit", "tests", "benchmark"]
project-excludes = [
    "**/__pycache__",
    "**/.pytest_cache",
    "**/.ruff_cache",
    "**/.venv",
    "**/build",
    "**/dist",
    "**/target",
]
python-version = "3.11"
search-path = ["src", "."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "B",
    "C4",
    "E",
    "F",
    "I",
    "PERF",
    "PIE",
    "PYI",
    "T10",
    "T20",
    "UP",
]

[tool.ruff.lint.isort]
known-first-party = ["benchmark", "refkit", "tests"]

[tool.ruff.lint.per-file-ignores]
"benchmark/runner.py" = ["T201"]
"scripts/*.py" = ["T201"]
