[project]
name = "refkit-workspace"
version = "0.0.1"
requires-python = ">=3.11,<3.15"
license = "Apache-2.0"
dependencies = [
    "polars-refkit",
    "refkit",
]

[tool.uv]
package = false

[tool.uv.sources]
refkit-bench = { workspace = true }
polars-refkit = { workspace = true }
refkit = { workspace = true }

[tool.uv.workspace]
members = [
    "benchmark",
    "packages/refkit",
    "packages/polars-refkit",
]

[dependency-groups]
dev = [
    "hatchling>=1.27",
    "maturin>=1.9,<2",
    "pyrefly>=1.0.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.16",
    "ty>=0.0.46",
]

[tool.pytest.ini_options]
testpaths = [
    "packages/refkit/tests",
    "packages/polars-refkit/tests",
    "benchmark/tests",
]
addopts = [
    "--cov=refkit",
    "--cov=polars_refkit",
    "--cov=refkit_bench",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-fail-under=100",
]

[tool.coverage.run]
omit = [
    "benchmark/tests/*",
    "packages/refkit/tests/*",
    "packages/polars-refkit/tests/*",
]

[tool.pyrefly]
project-includes = [
    "packages/refkit/src/refkit",
    "packages/refkit/tests",
    "packages/polars-refkit/polars_refkit",
    "packages/polars-refkit/tests",
    "benchmark/src/refkit_bench",
    "benchmark/tests",
]
project-excludes = [
    "**/__pycache__",
    "**/.pytest_cache",
    "**/.ruff_cache",
    "**/.venv",
    "**/build",
    "**/dist",
    "**/target",
]
python-version = "3.11"
search-path = [
    "benchmark/src",
    "packages/refkit/src",
    "packages/polars-refkit",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "B",
    "C4",
    "E",
    "F",
    "I",
    "PERF",
    "PIE",
    "PYI",
    "T10",
    "T20",
    "UP",
]

[tool.ruff.lint.isort]
known-first-party = [
    "refkit_bench",
    "polars_refkit",
    "refkit",
    "tests",
]

[tool.ruff.lint.per-file-ignores]
"benchmark/src/refkit_bench/runner.py" = ["T201"]
