[project]
name = "refkit-bench"
version = "0.0.1"
description = "Benchmark runner for refkit citation and BibTeX workflows"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Péter Ferenc Gyarmati", email = "dev.petergy@gmail.com" }
]
requires-python = ">=3.11,<3.15"
dependencies = [
    "bibtexparser==2.0.0b9",
    "citeproc-py>=0.9.3",
    "citeproc-py-styles>=0.1.5",
    "polars>=1.41,<1.42",
    "polars-refkit",
    "pytest>=9.0.3",
    "pytest-cov>=7.0.0",
    "refkit",
]

[project.scripts]
refkit-bench = "refkit_bench.runner:main"

[tool.uv.sources]
polars-refkit = { workspace = true }
refkit = { workspace = true }

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "README.md",
    "LICENSE",
    "pyproject.toml",
    "src/refkit_bench",
    "tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/refkit_bench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=refkit_bench",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-fail-under=100",
]

[tool.coverage.run]
omit = ["tests/*"]
