[package]
name = "refkit-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Shared Rust core for refkit packages"
repository.workspace = true

[dependencies]
biblatex = { version = "0.12.0", features = ["unic-langid"] }
hayagriva = { version = "0.10.0", features = ["csl-json"] }
indexmap = "2.12.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
