[package]
name = "refkit-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Shared Rust core for refkit packages"
repository.workspace = true

[dependencies]
biblatex = { version = "0.12.0", features = ["unic-langid"] }
hayagriva = { version = "=0.10.1", default-features = false, features = ["archive", "biblatex"] }
indexmap = "2.14.0"
serde.workspace = true
serde_json.workspace = true
